Removed some files. Moved the structs to the MoleReader class to prevent overwriting of vectors.

--- a/MoleImporterAPI_TestVersion/MoleImporterAPI_TestVersion.vcxproj
+++ b/MoleImporterAPI_TestVersion/MoleImporterAPI_TestVersion.vcxproj
@@ -142,18 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BinaryReader.cpp" />
-    <ClCompile Include="Mole.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="MoleReader.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BinaryReader.h" />
+    <ClInclude Include="MoleReader.h" />
     <ClInclude Include="junk.h" />
-    <ClInclude Include="Mole.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClInclude>
     <ClInclude Include="ReadHeaderData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
