Can now import all things skeletal, and some hierarchy-stuff.
Big change.

--- a/MoleImporterAPI_TestVersion/MoleImporterAPI_TestVersion.vcxproj
+++ b/MoleImporterAPI_TestVersion/MoleImporterAPI_TestVersion.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MoleImporterHeaders.h" />
     <ClInclude Include="MoleReader.h" />
     <ClInclude Include="junk.h" />
     <ClInclude Include="ReadHeaderData.h" />
